# sample-graphql-python

./: .dockerignore  .gitignore  Dockerfile  README.md  now.json  package.json  pyproject.toml  requirements.txt  shell.nix
api/: index.py
fn/: query.py  type_defs.py
tests/: conftest.py  test_g.py
